# cpp-checkers

./: .gitignore  CMakeLists.txt  LICENSE
model/: board.cpp  board.h  checker_board.cpp  checker_board.h  checker_piece.cpp  checker_piece.h  game_piece.cpp  game_piece.h  model.cpp  model.h  player.cpp  player.h
ncview/: game_window.cpp  model.cpp
